--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
     <script src="../plugins/bootstrap/js/holder.min.js"></script>
 <!--bootstrap-e  -->
     <script src="../js/component/base.js"></script>
-    <script src="../js/user_index.js"></script>
+    <script src="../js/index.js"></script>
 
 <!--js-e-->
 </head>
